# budgetgram

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  buf.gen.yaml  docker-compose.yaml
migrations/: 20251205222526_categories.sql  20251205222626_transactions.sql
proto/callback/v1/: callback.proto
src/: lib.rs  main.rs
src/handlers/: callback.rs  mod.rs
src/handlers/categories/: callback.rs  callback_handlers.rs  message_handlers.rs  mod.rs
src/handlers/categories/message_builders/: cancel_update_category.rs  create_category.rs  mod.rs  show_categories_settings.rs  show_category_settings.rs  update_category.rs
src/handlers/settings/: callback.rs  callback_handlers.rs  command_handlers.rs  mod.rs
src/handlers/settings/message_builders/: mod.rs  show_settings.rs
src/handlers/transactions/: callback_handlers.rs  message_handlers.rs  mod.rs
src/handlers/transactions/message_builders/: approve_transaction_category.rs  create_transaction.rs  mod.rs
src/models/: callback.rs  category.rs  mod.rs  transaction.rs
src/repositories/: categories.rs  mod.rs  transactions.rs  utils.rs
src/repositories/queries/: create_category.sql  create_transaction.sql  delete_category.sql  delete_transaction.sql  get_category.sql  get_transaction.sql  select_categories.sql  update_category.sql  update_transaction.sql
src/services/: categories.rs  mod.rs  transactions.rs
src/telegram/: mod.rs
