[package]
name = "budgetgram"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
base122-rs = "0.1.4"
sqlx = { version = "0.8", features = [ "runtime-tokio", "time", "postgres" ] }
async-trait = "0.1.89"
chrono = "0.4.42"
regex = "1.12.2"
once_cell = "1.21.3"
meval = "0.2.0"